; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_huffman.c_build_huff_tree.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_huffman.c_build_huff_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FF_HUFFMAN_FLAG_ZERO_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32)* @build_huff_tree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_huff_tree(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca [256 x i32], align 16
  %13 = alloca [256 x i32], align 16
  %14 = alloca [256 x i32], align 16
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* @FF_HUFFMAN_FLAG_ZERO_COUNT, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %11, align 4
  store i32 0, i32* %15, align 4
  %22 = getelementptr inbounds [256 x i32], [256 x i32]* %12, i64 0, i64 0
  %23 = getelementptr inbounds [256 x i32], [256 x i32]* %13, i64 0, i64 0
  %24 = getelementptr inbounds [256 x i32], [256 x i32]* %14, i64 0, i64 0
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %11, align 4
  %28 = call i32 @get_tree_codes(i32* %22, i32* %23, i32* %24, i32* %25, i32 %26, i32 0, i32 0, i32* %15, i32 %27)
  %29 = load i32*, i32** %6, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %15, align 4
  %32 = getelementptr inbounds [256 x i32], [256 x i32]* %13, i64 0, i64 0
  %33 = getelementptr inbounds [256 x i32], [256 x i32]* %12, i64 0, i64 0
  %34 = getelementptr inbounds [256 x i32], [256 x i32]* %14, i64 0, i64 0
  %35 = call i32 @ff_init_vlc_sparse(i32* %29, i32 %30, i32 %31, i32* %32, i32 2, i32 2, i32* %33, i32 4, i32 4, i32* %34, i32 1, i32 1, i32 0)
  ret i32 %35
}

declare dso_local i32 @get_tree_codes(i32*, i32*, i32*, i32*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @ff_init_vlc_sparse(i32*, i32, i32, i32*, i32, i32, i32*, i32, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
